<resources>
    <string name="app_name">HDS Explorer</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicGF1bHBoaWxpbW9uZSIsImEiOiJjbG1rM3BvcDkwYXMxMm5wbDUyNTA1NGlhIn0.HuorKNYmjgPzGbTDYwDu-Q</string>
    <string name="copyright_app_name_lbl">HDS Explorer</string>
    <string name="copyright_app_company_lbl">© 2025 Philimone\'s Group</string>
    <string name="copyright_app_developers_lbl">Developed by Paulo Filimone</string>
    <string name="bt_ok_lbl">OK</string>
    <string name="bt_yes_lbl">Yes</string>
    <string name="bt_no_lbl">No</string>
    <string name="bt_cancel_lbl">Cancel</string>
    <string name="bt_confirm_lbl">Confirm</string>
    <string name="bt_accept_lbl">Accept</string>
    <string name="bt_reject_lbl">Reject</string>
    <string name="bt_delete_lbl">Delete</string>
    <string name="bt_open_lbl">Open</string>
    <string name="bt_close_lbl">Close</string>
    <string name="bt_enable_lbl">Enable</string>
    <string name="bt_disable_lbl">Disable</string>
    <string name="bt_try_again_lbl">Try again</string>
    <string name="info_lbl">Info</string>
    <string name="error_lbl">Error</string>
    <string name="updated_successfully_lbl">Updated Successfully</string>
    <string name="storage_access_title_lbl">File access not granted</string>
    <string name="storage_access_odk_error_lbl">Access to files were denied, HDS Explorer will not have access to ODK Forms due to lack of permissions to ODK Collect</string>
    <string name="storage_access_odk_error_continue_lbl">Access to ODK Files was denied.\nHDS Explorer will not have access to ODK Forms due to lack of permissions to ODK Collect.\nYou can use the app normally but without ODK Forms access</string>
    <string name="odk_couldnt_open_xform_lbl">Couldn\'t open the ODK Form</string>
    <string name="odk_couldnt_reopen_xform_lbl">Couldn\'t re-open the saved ODK Form</string>
    <string name="odk_problem_lbl">A problem occurred while trying to open the ODK Form</string>
    <string name="odk_form_load_error_odk_not_installed_lbl">Couldn\'t get ODK Forms, There is no ODK Collect App installed!</string>
    <string name="odk_form_load_error_provider_lbl">Couldn\'t get ODK Forms, An Error occurred while trying to get ODK Forms from content provider!</string>
    <string name="odk_form_load_error_form_not_found_lbl">The form wasn\'t found on ODK Collect. Please, make sure the ODK Form exists.</string>
    <string name="odk_form_load_error_folder_permissions_lbl">Couldn\'t get ODK Forms files, Access to ODK Collect content data was denied!</string>
    <string name="odk_form_load_permission_storage_denied_lbl">It will not be possible to access ODK Forms. There is no permission to use the storage for read/write operations on ODK Collect!</string>
    <string name="odk_form_load_permissions_denied_lbl">To proceed to ODK Collect and start collecting the Form.\nYou must grant all the previous permissions given by the system!</string>
    <string name="odk_form_load_permission_request_manage_all_title_lbl">ODK Collect Forms Access</string>
    <string name="odk_form_load_permission_request_manage_all_info_lbl">To be able to access ODK Forms, You must enable (Allow access to manage all files) in the next page after click OK button!</string>
    <string name="odk_form_load_permission_request_android_dir_info_lbl">To be able to access ODK Folder Forms, You must click on (Use this Folder) in the next page that will be displayed after clicking OK button!</string>
    <string name="odk_form_load_permission_request_readwrite_denied_lbl">It will not be possible to access ODK Forms. There is no permission to use the storage for read/write operations on ODK Collect forms!</string>
    <string name="odk_form_load_permission_request_readphonestate_denied_lbl">It will not be possible to open ODK Forms. There is no permission to get device and network information!</string>
    <string name="odk_form_load_error_saving_prefilled_xml_lbl">An error occurred while trying to save preloaded xml data file.</string>
    <string name="odk_form_load_error_saving_instance_form_lbl">Couldn\'t create a new instance of the preloaded xml data in ODK Collect.</string>
    <string name="odk_unfinished_dialog_msg">The form wasn\'t finalized. This instance of the form will be deleted. Choose the next action?</string>
    <string name="odk_unfinished_button_delete">Delete Form</string>
    <string name="odk_unfinished_button_change">Change Form</string>
    <string name="odk_unfinished_button_save">Save Form</string>
    <string name="odk_unfinished_form_saved">The form was saved but is not finalized, can be edited later.</string>
    <string name="odk_unfinished_form_not_found">The form wasn\'t found on ODK Collect. Please, make sure the ODK Form exists.</string>
    <string name="odk_unfinished_extension_msg">The extension form wasn\'t finalized. This (%1$s) won\'t be uploaded because the respective extension form must be finalized.\nPlease choose the next action?</string>
    <string name="odk_unfinished_extension_button_edit">Edit Form</string>
    <string name="odk_unfinished_extension_button_save">Save Form</string>
    <string name="odk_unfinished_extension_notfinalized">Not finalized</string>
    <string name="odk_unfinished_extension_notfound">Not found</string>
    <string name="sync_downloading_lbl">Downloading</string>
    <string name="sync_saving_lbl">Saving data</string>
    <string name="sync_deleting_lbl">Deleting</string>
    <string name="sync_params_lbl">App. Parameters</string>
    <string name="sync_modules_lbl">Modules</string>
    <string name="sync_forms_lbl">ODK Forms</string>
    <string name="sync_coreforms_exts_lbl">Core Forms Extensions</string>
    <string name="sync_coreformsoptions_lbl">Core Forms Options</string>
    <string name="sync_users_lbl">Users</string>
    <string name="sync_datasets_lbl">Datasets</string>
    <string name="sync_datasets_csv_lbl">Datasets CSV/ZIP Files</string>
    <string name="sync_tracking_lists_lbl">Follow-Up Lists</string>
    <string name="sync_rounds_lbl">Rounds</string>
    <string name="sync_regions_lbl">Regions</string>
    <string name="sync_households_datasets_lbl">Households Datasets</string>
    <string name="sync_households_lbl">Households</string>
    <string name="sync_members_lbl">Members</string>
    <string name="sync_residencies_lbl">Residencies</string>
    <string name="sync_demographics_events_lbl">Demographics Events</string>
    <string name="sync_visits_lbl">Visits</string>
    <string name="sync_head_relationships_lbl">Head Relationships</string>
    <string name="sync_marital_relationships_lbl">Marital Relationships</string>
    <string name="sync_inmigrations_lbl">Immigrations</string>
    <string name="sync_outmigrations_lbl">Outmigrations</string>
    <string name="sync_pregnancy_registrations_lbl">Pregnancies</string>
    <string name="sync_pregnancy_outcomes_lbl">Pregnancy Outcomes</string>
    <string name="sync_pregnancy_visits_lbl">Pregnancy Visits</string>
    <string name="sync_deaths_lbl">Deaths</string>
    <string name="sync_incomplete_visits_lbl">Incomplete Visits</string>
    <string name="sync_regionheads_lbl">Region Heads</string>
    <string name="sync_proxyheads_lbl">Proxy Heads</string>
    <string name="sync_saved_lbl">Saved</string>
    <string name="sync_deleted_lbl">Deleted</string>
    <string name="sync_records_lbl">records</string>
    <string name="sync_successfully_lbl">Data was successfully synchronized.</string>
    <string name="sync_failure_file_not_found_lbl">Couldn\'t find file on the Server to Download</string>
    <string name="sync_failure_unknown_lbl">An error occurred during synchronization</string>
    <string name="sync_synchronized_msg_lbl">Total of %1$s records synced:</string>
    <string name="sync_downloaded_msg_lbl">Total of %1$s data downloaded:</string>
    <string name="sync_result_dialog_title">Synchronization Details</string>
    <string name="sync_upload_result_dialog_title">Upload Details</string>
    <string name="sync_upload_instance_id_lbl">UID:</string>
    <string name="sync_upload_instance_code_lbl">Code:</string>
    <string name="server_sync_title_lbl">Synchronization Panel</string>
    <string name="server_sync_download_lbl">Sync Downloads</string>
    <string name="server_sync_upload_lbl">Sync Uploads</string>
    <string name="server_sync_status_notsynced_lbl">Not Synced</string>
    <string name="server_sync_status_synced_lbl">Last Sync on</string>
    <string name="server_sync_status_sync_error_lbl">Error during last Sync on</string>
    <string name="server_sync_bt_upload_all_lbl">Upload Selected Forms</string>
    <string name="server_sync_bt_sync_all_lbl">Synchronize All</string>
    <string name="server_sync_bt_sync_lbl">Sync</string>
    <string name="server_sync_bt_stop_lbl">Stop</string>
    <string name="server_sync_bt_settings_lbl">Download Settings</string>
    <string name="server_sync_bt_datasets_lbl">Download External Datasets</string>
    <string name="server_sync_bt_tracking_lists_lbl">Download Follow Up Lists</string>
    <string name="server_sync_bt_households_datasets_lbl">Download Households Datasets</string>
    <string name="server_sync_bt_dssevents_lbl">Download Demographics Events</string>
    <string name="server_sync_uploaded_date_lbl">Last Uploaded Date:</string>
    <string name="server_sync_upload_successfully_lbl">Uploaded Successfully:</string>
    <string name="server_sync_upload_werrors_lbl">Records with Validation Errors:</string>
    <string name="server_sync_upload_notuploaded_lbl">Not Uploaded:</string>
    <string name="server_sync_upload_show_not_uploaded_lbl">Show not uploaded forms</string>
    <string name="server_sync_upload_show_uploaded_forms_lbl">Show uploaded forms</string>
    <string name="server_sync_upload_show_uploaded_werrors_lbl">Show records with errors</string>
    <string name="server_sync_upload_select_all">Select All</string>
    <string name="server_sync_upload_total_lbl">%1$d Forms</string>
    <string name="server_sync_uploading_form_lbl">Uploading %1$s Form</string>
    <string name="server_sync_uploading_finished_lbl">Upload Finished</string>
    <string name="server_sync_upload_errors_result_lbl">Records with Validation Errors</string>
    <string name="server_sync_offline_mode_title_lbl">Can\'t Synchronize</string>
    <string name="login_welcome_lbl">WELCOME</string>
    <string name="login_signin_msg_lbl">Sign in to continue</string>
    <string name="login_username_lbl">Username</string>
    <string name="login_password_lbl">Password</string>
    <string name="login_button_lbl">Login</string>
    <string name="login_synchronize_lbl">Synchronize</string>
    <string name="login_settings_lbl">Change Settings</string>
    <string name="member_filter_gender_lbl">Sex</string>
    <string name="member_filter_gender_male_lbl">Male</string>
    <string name="member_filter_gender_female_lbl">Female</string>
    <string name="member_list_newmem_housename_lbl">Household Name</string>
    <string name="member_list_newmem_housename_hint">eg. LANGA\'s FAMILY</string>
    <string name="member_list_newmem_code_lbl">Code</string>
    <string name="member_list_newmem_code_hint">eg. ACA000001</string>
    <string name="member_list_newmem_name_lbl">Fullname</string>
    <string name="member_list_newmem_name_hint">eg. JON SNOW</string>
    <string name="member_list_newmem_dob_lbl">Date of Birth</string>
    <string name="new_household_code_lbl">Household Code</string>
    <string name="settings_server_group_lbl">HDS-Explorer</string>
    <string name="settings_server_group_url_lbl">Server URL</string>
    <string name="settings_odk_group_lbl">ODK</string>
    <string name="settings_odk_group_url_lbl">Aggregate URL</string>
    <string name="settings_redcap_group_lbl">REDCap</string>
    <string name="settings_redcap_group_url_lbl">Server URL</string>
</resources>